2004-08-03  Per Bothner  <per@bothner.com>

	* Children.java:  Extend MethodProc instead of CpsProcedure
	* RelativeStep.java:  Likewise.
	* SubList.java:  Likewise.
	* ValuesEvery.java:  Likewise.
	* ValuesFilter.java:  Likewise.
	* IntegerRange.java:  Likewise.  Also explicitly call setName

2004-07-20  Per Bothner  <per@bothner.com>

	* IntegerRange.java:  Remove unused import statements.
	* MinMax.java:  Likewise.
	* RelativeStep.java:  Likewise.
	* XMLFormat.java:  Likewise.

2004-01-04  Per Bothner  <per@bothner.com>

	* StringValue.java (stringValue):  Require KNode, not SeqPosition.
	* ValuesFilter.java (matches):  Check KNode, not SeqPosition.

2003-11-21  Per Bothner  <per@bothner.com>

	* IntegerRange.java (integerRange):  If M > N then M to N is now empty.

2003-11-14  Per Bothner  <per@bothner.com>

	* StringValue.java (concat$V):  New method.

2003-10-19  Per Bothner  <per@bothner.com>

	* ValuesEvery.java:  New class, extends CpsProcedure.
	* Makefile.am:  Update accordingly.

2003-10-07  Per Bothner  <per@bothner.com>

	* BooleanValue.java (booleanValue):  Change to match spec better.

	* IntegerRange.java (integerRange):  Fix bugs.  Make static.

2003-09-24  Per Bothner  <per@bothner.com>

	* MakeAttribute.java:  Now extends gnu.kawa.xml.NodeConstructor.
	(apply):  Update.  (compileToNode):  New, replaces compile method.
	* MakeElement.java:  Likewise.

2003-09-11  Per Bothner  <per@bothner.com>

	* ValuesFilter.java:  Implement CanInline.
	(inline):  New method.

2003-09-09  Per Bothner  <per@bothner.com>

	* RelativeStep.java:  Now implements CanInline.
	(inline):  New method.
	(apply):  Use Nodes class and simplify.

2003-08-03  Per Bothner  <per@bothner.com>

	* RelativeStep.java:  New class, extends CpsProcedure.
	* ValuesFilter.java:  Re-write to correctly implement spec.
	* Position.java:  Remove - no longer used.
	* Makefile.in (java_sources):  Update accordingly.

	* StringValue.java (contains, startsWith, endsWith):  Use stringValue