@@ -1,3 +1,8 @@
+2004-08-08  Per Bothner  <per@bothner.com>
+
+	* RelativeStep.java (apply):  Update to use check3.
+	* ValuesEvery.java (apply):  Update to use check1.
+
 2004-08-03  Per Bothner  <per@bothner.com>
 
 	* Children.java:  Extend MethodProc instead of CpsProcedure
